--- a/composer.json
+++ b/composer.json
@@ -16,26 +16,15 @@
         "illuminate/container": "^5.8",
         "illuminate/database": "^5.8",
         "illuminate/events": "^5.8",
-        "easyrdf/easyrdf": "dev-master"
+        "madbob/easyrdf-on-guzzle": "^0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0|^7.0",
-        "orchestra/testbench": "^3.1",
-        "mockery/mockery": "^1.0",
-        "satooshi/php-coveralls": "^2.0",
         "doctrine/dbal": "^2.5"
     },
     "autoload": {
         "psr-0": {
             "SolidDataWorkers\\SPARQL": "src/"
         }
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php",
-            "tests/models",
-            "tests/seeds"
-        ]
     },
     "extra": {
         "laravel": {
