--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,25 @@ services:
       timeout: 5s
       retries: 5
 
+  blazegraph:
+    image: lyrasis/blazegraph:2.1.5
+    container_name: sparql-blazegraph
+    ports:
+      - "9999:8080"
+    environment:
+      - JAVA_XMS=512m
+      - JAVA_XMX=2g
+    volumes:
+      - blazegraph-data:/var/lib/blazegraph
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/bigdata/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
 volumes:
   fuseki-data:
+    driver: local
+  blazegraph-data:
     driver: local
