--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,24 @@
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
+    "test:all": [
+      "@test:fuseki",
+      "@test:blazegraph",
+      "@test:smoke:fuseki",
+      "@test:smoke:blazegraph"
+    ],
+    "test:unit": "vendor/bin/phpunit tests/Unit",
+    "test:feature": "vendor/bin/phpunit tests/Feature",
+    "test:smoke": "vendor/bin/phpunit tests/Smoke",
     "test:coverage": "vendor/bin/phpunit --configuration phpunit.coverage.xml",
+    "test:fuseki": "SPARQL_IMPLEMENTATION=fuseki vendor/bin/phpunit",
+    "test:blazegraph": "SPARQL_ENDPOINT=http://localhost:9999/bigdata/sparql SPARQL_UPDATE_ENDPOINT=http://localhost:9999/bigdata/sparql SPARQL_IMPLEMENTATION=blazegraph vendor/bin/phpunit",
+    "test:smoke:fuseki": "SPARQL_IMPLEMENTATION=fuseki vendor/bin/phpunit tests/Smoke",
+    "test:smoke:blazegraph": "SPARQL_ENDPOINT=http://localhost:9999/bigdata/sparql SPARQL_UPDATE_ENDPOINT=http://localhost:9999/bigdata/sparql SPARQL_IMPLEMENTATION=blazegraph vendor/bin/phpunit tests/Smoke",
+    "test:smoke:all": [
+      "@test:smoke:fuseki",
+      "@test:smoke:blazegraph"
+    ],
     "analyse": "vendor/bin/phpstan analyse --memory-limit=512M",
     "format": "vendor/bin/pint",
     "format:test": "vendor/bin/pint --test"
