--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -207,10 +207,10 @@ jobs:
           XDEBUG_MODE: coverage
 
       - name: PHPUnit Coverage Badge
-        uses: timkrassenberg/phpunit-coverage-badge@v1.2.0
+        uses: timkrase/phpunit-coverage-badge@v1.2.1
         with:
           coverage_badge_path: output/coverage.svg
-          push_badge: true
+          push_badge: false
           repo_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check code style for badge
